--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .navbar {
-    padding-left: 62px;
+    padding-left: 61px;
 }
 
 .navbar-menu {
@@ -27,16 +27,12 @@ body {
     margin: 0;
 }
 
-/* .navbar-item {
-
-} */
-
 .navbar-link {
     display: flex;
     align-items: center;
     height: 64px;
     font-style: normal;
-    font-size: 14pt;
+    font-size: 14px;
     line-height: 21px;
     text-align: center;
     letter-spacing: 0.25px;
@@ -56,7 +52,7 @@ body {
 }
 
 .container {
-    padding: 36px 13px 0px 62px;
+    padding: 36px 13px 0px 50px;
 }
 
 .content {
